force-app/main/default/objects/AAR_Professional_Activity__c/AAR_Professional_Activity__c.object-meta.xml
<CustomObject>
    <label>Professional Activity</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>