force-app/main/default/objects/AAR_Professional_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Committee / Board Membership</fullName><default
        >false</default><label>Committee / Board Membership</label></value>
            <value><fullName>Grant Reviewing</fullName><default
        >false</default><label>Grant Reviewing</label></value>
            <value><fullName>Journal Reviewing</fullName><default
        >false</default><label>Journal Reviewing</label></value>
            <value><fullName>Professional Society</fullName><default
        >false</default><label>Professional Society</label></value>
            <value><fullName>Conference Organization</fullName><default
        >false</default><label>Conference Organization</label></value>
            <value><fullName>UHN / Institute Contribution</fullName><default
        >false</default><label>UHN / Institute Contribution</label></value>
            <value><fullName>Consulting</fullName><default>false</default><label
        >Consulting</label></value>
            <value><fullName>Other Academic Activity</fullName><default
        >false</default><label>Other Academic Activity</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>