force-app/main/default/objects/AAR_Professional_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Brief Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>