force-app/main/default/objects/AAR_Professional_Activity__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization / Company</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>