force-app/main/default/objects/AAR_Professional_Activity__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role / Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>