force-app/main/default/objects/AAR_Professional_Activity__c/fields/Time_Invested_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Invested_Hours__c</fullName>
    <label>Time Invested (hrs)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>